--- a/myprojects.html
+++ b/myprojects.html
@@ -39,18 +39,18 @@
         <div id="circle4"></div>
         <div id="circle5"></div>
 
-        <a href="https://www.notion.so/moodify-ef041f928349428c8009a73769ea262d?pvs=4" id="moodify">
+        <a href="syncwithdata.html" target="_blank" id="moodify">
           <img 
-            src="media/pictures/MoodifyMockups.png" 
+            src="media/pictures/syncwithdatamockups.png" 
             alt="moodify-mockup">
         </a>
       
-         <h2 class="moodify">moodify</h2>
-         <p class="moodify">designing an application that creates a playlist based on your <b>mood</b> or <b>activity</b></p>
-         <span class="tag">ux/ui design (team)</span>
+         <h2 class="moodify">sync with data</h2>
+         <p class="moodify">a sync licensing platform that leverages <b>music data analytics</b> to help optimize future sync opportunities</p>
+         <span class="tag">data research</span>
 
          <!--change to goodreads-->
-         <a href="https://www.notion.so/goodreads-redesign-404125a6bfa4454092ad1129cd0dcb21?pvs=4" id="moodify2">
+         <a href="https://www.notion.so/goodreads-redesign-404125a6bfa4454092ad1129cd0dcb21?pvs=4" target="_blank" id="moodify2">
             <img src="media/pictures/GoodreadsMockup.png" alt="goodreads-mockup" width="650" >
           </a>
            <h2 class="goodreads">goodreads</h2>
@@ -59,21 +59,20 @@
 
 
            <!--change to haveyaheard-->
-           <a href="projects-HAVEYAHEARD.html" id="moodify3">
-            <img src="media/pictures/HaveYaHeardMockup.png" alt="haveyaheard-mockup" width="650">
+           <a href="https://jellycatzodiac.netlify.app/" target="_blank" id="moodify3">
+            <img src="media/pictures/jellycatmockup.png" alt="haveyaheard-mockup" width="650">
            </a>
-           <h2 class="haveyaheard">have ya heard?</h2>
-           <p class="haveyaheard">a music discovery app designed for <b>superfans</b> who crave deeper connections with their favorite artists</p>
-           <span class="tag3">ux/ui design (team)</span>
+           <h2 class="haveyaheard">jellycat zodiac project</h2>
+           <p class="haveyaheard">find out what <b>jellycat</b> you are depending on your birthday</p>
+           <span class="tag3">ux/ui design / javascript</span>
 
 <!-- sync with data -->
-           <a href="https://www.notion.so/sync-with-data-d27dafc5b0f948419d37b816c56da903?pvs=4" id="moodify4">
-            <img src="media/pictures/SyncwithDataMockup.png" alt="syncwithdata-mockup" width="650">
+           <a href="https://www.notion.so/moodify-ef041f928349428c8009a73769ea262d?pvs=4" target="_blank" id="moodify4">
+            <img src="media/pictures/MoodifyMockups.png" alt="syncwithdata-mockup" width="650">
            </a>
-           <h2 class="syncwithdata">sync with data</h2>
-           <p class="syncwithdata">a sync licensing platform that leverages <b>music data analytics</b> to help optimize future sync opportunities</p>
-           <span class="tag4">data research</span>
-
+           <h2 class="syncwithdata">moodify</h2>
+           <p class="syncwithdata">designing an application that creates a playlist based on your <b>mood</b> or <b>activity</b></p>
+           <span class="tag4">ux/ui design (team)</span>
 
 
       </section>
