--- a/syncwithdata.html
+++ b/syncwithdata.html
@@ -54,7 +54,6 @@
   <select id="genreInput">
     <option value="" disabled selected>Select a TV Genre</option>
     <option value="Action">Action 💥</option>
-    <option value="Thriller">Thriller 😱</option>
     <option value="Comedy">Comedy 🤣</option>
     <option value="Crime">Crime 🕵️‍♂️</option>
     <option value="Drama">Drama 🎭</option>
@@ -65,6 +64,15 @@
     <option value="Sci-Fi">Sci-Fi 👽 </option>
   </select>
     <button id="predictButton">Search</button>
+    <img src="media/pictures/actionheatmap1.png" alt="actionheatmap1" class="heatmap" width="650" id="actionHeatMap">
+    <img src="media/pictures/comedyheatmap1.png" alt="comedyheatmap1" class="heatmap" width="650" id="comedyHeatMap">
+    <img src="media/pictures/crimeheatmap1.png" alt="crimeheatmap1" class="heatmap" width="650" id="crimeHeatMap">
+    <img src="media/pictures/dramaheatmap1.png" alt="dramaheatmap1" class="heatmap" width="650" id="dramaHeatMap">
+    <img src="media/pictures/fantasyheatmap1.png" alt="fantasyheatmap1" class="heatmap" width="650" id="fantasyHeatMap">
+    <img src="media/pictures/horrorheatmap1.png" alt="horrorheatmap1" class="heatmap" width="650" id="horrorHeatMap">
+    <img src="media/pictures/realitytvheatmap1.png" alt="realitytvheatmap1" class="heatmap" width="650" id="reality-tvHeatMap">
+    <img src="media/pictures/romanceheatmap1.png" alt="romanceheatmap1" class="heatmap" width="650" id="romanceHeatMap"> 
+    <img src="media/pictures/scifiheatmap1.png" alt="scifiheatmap1" class="heatmap" width="650" id="sci-fiHeatMap">
     <div class="result-container">
   <p id="result"></p>
 </div>
